Elements have a class

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 <body>
     <div class="menu">
         <input type="checkbox" class="menu__toggler">
-        <div class="menu__hamburger"><div></div></div>
+        <div class="menu__hamburger"><div class="menu__hamLines"></div></div>
         <div class="menu__content">
-            <div>
-                <div>
+            <div class="menu__innerBody">
+                <nav class="menu__nav">
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Forum</a></li>
+                        <li class="menu__element"><a class="menu__link" href="#">Home</a></li>
+                        <li class="menu__element"><a class="menu__link" href="#">Blog</a></li>
+                        <li class="menu__element"><a class="menu__link" href="#">Forum</a></li>
                     </ul>
-                </div>
+                </nav>
             </div>
         </div>
     </div>
